--- a/app/src/main/res/layout/food_category_list_item.xml
+++ b/app/src/main/res/layout/food_category_list_item.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativelayout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <ImageView
+        android:id="@+id/category_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/unknown" />
 
     <TextView
-        android:id="@+id/list_item_crime_title_text_view"
+        android:id="@+id/category_text_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:textStyle="bold"
-        android:padding="4dp"
-        tools:text="Crime Title"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
-
+        android:layout_height="40dp"
+        android:layout_alignLeft="@id/category_image_view"
+        android:layout_alignRight="@id/category_image_view"
+        android:layout_alignBottom="@id/category_image_view"
+        android:background="@color/colorBackground"
+        android:textColor="#FFFFFF"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="1dp"
+        android:gravity="center"
+        android:textStyle="normal|bold"
+        android:textSize="30sp"/>
 
 </RelativeLayout>
