--- a/app/src/main/res/layout/food_category_list_item.xml
+++ b/app/src/main/res/layout/food_category_list_item.xml
@@ -4,27 +4,38 @@
     android:id="@+id/relativelayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-
     <ImageView
         android:id="@+id/category_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/unknown" />
+        android:src="@drawable/unknown"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <View
+        android:id="@+id/category_selector"
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:background="@drawable/category_selected"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:visibility="gone"
+        />
 
     <TextView
         android:id="@+id/category_text_view"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_alignLeft="@id/category_image_view"
-        android:layout_alignRight="@id/category_image_view"
-        android:layout_alignBottom="@id/category_image_view"
         android:background="@color/colorBackground"
         android:textColor="#FFFFFF"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="1dp"
         android:gravity="center"
         android:textStyle="normal|bold"
-        android:textSize="30sp"/>
+        android:textSize="30sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="5dp"/>
+
 
 </RelativeLayout>
