--- a/app/src/main/res/layout-land/fragment_contacts.xml
+++ b/app/src/main/res/layout-land/fragment_contacts.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="horizontal">
 
     <ScrollView
         android:id="@+id/fragment_contacts_scrolview"
@@ -11,64 +11,70 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <by.dimanolog.testappbalinasoft.custom.CustomMapView
                 android:id="@+id/fragment_contacts_map"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"/>
+
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"/>
+                android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/fragment_contacts_tel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_contact_telephone"
+                    android:gravity="center_vertical"
+                    android:text="@string/farfor_tel"/>
 
-            <TextView
-                android:id="@+id/fragment_contacts_tel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_contact_telephone"
-                android:gravity="center_vertical"
-                android:text="@string/farfor_tel"/>
+                <TextView
+                    android:id="@+id/fragment_contacts_address2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_farfor_address"
+                    android:gravity="center_vertical"
+                    android:text="@string/farfor_address2"/>
 
-            <TextView
-                android:id="@+id/fragment_contacts_address1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_farfor_address"
-                android:gravity="center_vertical"
-                android:text="@string/farfor_address1"/>
+                <TextView
+                    android:id="@+id/fragment_contacts_address1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_farfor_address"
+                    android:gravity="center_vertical"
+                    android:text="@string/farfor_address1"/>
 
-            <TextView
-                android:id="@+id/fragment_contacts_address2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_farfor_address"
-                android:gravity="center_vertical"
-                android:text="@string/farfor_address2"/>
+                <TextView
+                    android:id="@+id/fragment_contacts_address3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_farfor_address"
+                    android:gravity="center_vertical"
+                    android:text="@string/farfor_address3"/>
 
-            <TextView
-                android:id="@+id/fragment_contacts_address3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_farfor_address"
-                android:gravity="center_vertical"
-                android:text="@string/farfor_address3"/>
-
-            <TextView
-                android:id="@+id/fragment_contacts_address4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:drawableLeft="@drawable/ic_farfor_address"
-                android:gravity="center_vertical"
-                android:text="@string/farfor_address4"/>
+                <TextView
+                    android:id="@+id/fragment_contacts_address4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_farfor_address"
+                    android:gravity="center_vertical"
+                    android:text="@string/farfor_address4"/>
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
