--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -1,25 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <com.google.android.gms.maps.MapView
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:id="@+id/fragment_contacts_map"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
+    <ScrollView
+        android:id="@+id/fragment_contacts_scrolview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            android:layout_weight="1"/>
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <by.dimanolog.testappbalinasoft.custom.CustomMapView
+                android:id="@+id/fragment_contacts_map"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"/>
+
+
+            <TextView
+                android:id="@+id/fragment_contacts_tel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_contact_telephone"
+                android:gravity="center_vertical"
+                android:text="@string/farfor_tel"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/our_adress"
+                />
+
+            <TextView
+                android:id="@+id/fragment_contacts_address1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_farfor_address"
+                android:gravity="center_vertical"
+                android:text="@string/farfor_address1"
+                />
+
+            <TextView
+                android:id="@+id/fragment_contacts_address2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_farfor_address"
+                android:gravity="center_vertical"
+                android:text="@string/farfor_address2"
+                />
+
+            <TextView
+                android:id="@+id/fragment_contacts_address3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_farfor_address"
+                android:gravity="center_vertical"
+                android:text="@string/farfor_address3"
+                />
+
+            <TextView
+                android:id="@+id/fragment_contacts_address4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_farfor_address"
+                android:gravity="center_vertical"
+                android:text="@string/farfor_address4"
+                />
+
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
