--- a/app/src/main/res/layout/offers_list_item.xml
+++ b/app/src/main/res/layout/offers_list_item.xml
@@ -4,6 +4,9 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?android:attr/selectableItemBackground"
                 xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
@@ -18,9 +21,9 @@
 
     <TextView
         android:id="@+id/offer_list_item_offer_name_txt"
-        android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="?android:attr/textAppearanceLarge"
         android:layout_alignTop="@+id/offer_image_view"
         android:layout_toRightOf="@+id/offer_image_view"
         android:layout_marginLeft="12dp"
