--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#b7000000</color>
     <color name="itemSelected">#009900</color>
+    <color name="price_color">#ed2121</color>
 
 </resources>
