--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,5 +17,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <!--Text styles -->
+    <style name="Price" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/price_color</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
+
 
 </resources>
