--- a/app/src/main/res/layout/food_category_list_item.xml
+++ b/app/src/main/res/layout/food_category_list_item.xml
@@ -11,24 +11,8 @@
         android:id="@+id/category_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/unknow_mini"
+        android:src="@drawable/unknown_mini"
         android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/category_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorBackground"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:textStyle="normal|bold"
-        android:textSize="20sp"
-        tools:text="Незнамо што"
-        android:layout_alignBottom="@+id/category_image_view"
-        android:layout_alignLeft="@+id/category_image_view"
-        android:layout_alignStart="@+id/category_image_view"
-        android:layout_alignRight="@+id/category_image_view"
-        android:layout_alignEnd="@+id/category_image_view"/>
 
     <View
         android:id="@+id/category_selector"
@@ -41,6 +25,17 @@
         android:layout_alignStart="@+id/category_image_view"
         android:layout_alignRight="@+id/category_image_view"
         android:layout_alignEnd="@+id/category_image_view"/>
+
+    <TextView
+        android:id="@+id/category_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        style="@style/CategoryTittle"
+        tools:text="Незнамо што"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 
 </RelativeLayout>
