--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:weightSum="1">
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,72 +16,69 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/fragment_offer_image"
-                android:layout_width="240dp"
-                android:layout_height="240dp"
-                android:layout_gravity="center"
-                android:scaleType="centerCrop"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
 
-                app:srcCompat="@drawable/warm"/>
+                <ImageView
+                    android:id="@+id/fragment_offer_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/warm"/>
+
+                <TextView
+                    android:id="@+id/fragment_offer_price"
+                    style="@style/PriceTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/fragment_offer_image"
+                    android:layout_alignRight="@+id/fragment_offer_image"
+                    android:layout_alignBottom="@+id/fragment_offer_image"
+                    android:background="@drawable/bg_red"
+                    android:gravity="left"
+                    android:padding="5dp"
+                    tools:text="100"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/fragment_offer_name"
-                style="?android:attr/textAppearanceLarge"
+                style="@style/TitleFont"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 tools:text="Offer name"
-
                 />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:text="@string/offer_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/textAppearanceMedium"
-                    android:id="@+id/textView2"
-                    android:padding="10dp"
-                    />
-
-                <TextView
-
-                    android:id="@+id/fragment_offer_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    style="@style/Price"
-                    android:drawableRight="@drawable/ic_action_ruble_sign"
-                    android:background="@drawable/bg_red"
-                    android:gravity="left"
-                    tools:text="100"
-                    />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/fragment_offer_description"
-                style="?android:attr/textAppearanceSmall"
+                style="@style/NormalText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="4"
-                android:padding="10dp"
-                android:text="TextView"
+                android:padding="5dp"
                 tools:text="Лапша Удон, окунь, перец болгарский, кольца кальмара,
         орковь, фасоль стручковая, лук, соус Терияки, кунжут, зеленый лук."/>
 
             <TextView
                 android:id="@+id/fragment_offer_param"
+                style="@style/NormalText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:elevation="1dp"
-                style="?android:attr/textAppearanceMedium"
                 android:maxLines="10"
-                android:padding="10dp"
+                android:padding="5dp"
                 tools:text="Вес: 100гр."/>
         </LinearLayout>
 
