--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#292828</color>
-    <color name="colorPrimaryDark">#020202</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorBackground">#b7000000</color>
+    <color name="colorPrimary">#2d2c2c</color>
+    <color name="colorPrimaryDark">#0d0d0d</color>
+    <color name="colorAccent">#0197fa</color>
     <color name="itemSelected">#009900</color>
-    <color name="price_color">#ed2121</color>
+    <color name="red">#ed2121</color>
+
+    <!-- grayscale -->
+    <color name="white">#FFFFFF</color>
+    <color name="gray_light">#DBDBDB</color>
+    <color name="gray">#939393</color>
+    <color name="gray_dark">#5F5F5F</color>
+    <color name="black">#323232</color>
 
 </resources>
