--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,12 +17,42 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
-    <!--Text styles -->
-    <style name="Price" parent="@android:style/TextAppearance">
-        <item name="android:textColor">@color/price_color</item>
-        <item name="android:textSize">25sp</item>
+    <!--TextView styles -->
+    <style name="PriceTextView">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">@dimen/font_larger</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:drawableRight">@drawable/ic_action_ruble_sign</item>
+        <item name="android:background">@drawable/bg_red</item>
     </style>
 
+    <style name="PriceTextView.List">
+        <item name="android:textSize">@dimen/font_medium</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:drawableRight">@drawable/ic_action_ruble_sign_mini</item>
+    </style>
+
+    <style name="CategoryTittle">
+        <item name="android:background">#b7000000</item>
+        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!--Font styles -->
+    <style name="TitleFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/font_medium</item>
+    </style>
+
+    <style name="TitleFont.List">
+        <item name="android:textSize">@dimen/font_more_normal</item>
+    </style>
+
+    <style name="NormalText" parent="@android:style/TextAppearance.Small">
+        <item name="android:textColor">@color/gray_dark</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+    </style>
 
 
 </resources>
