--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -23,7 +23,7 @@
         <item>sets</item>
         <item>rolls</item>
         <item>sushi</item>
-        <item>additive</item>
+        <item>addit</item>
         <item>dessert</item>
         <item>beverages</item>
         <item>snack</item>
